# club-3090

./: .env.example  .gitignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
docs/: ADDING_MODELS.md  ARCHITECTURE.md  BRING_YOUR_OWN.md  CLIFFS.md  COMPOSE_GENERATOR.md  DTYPE_MATRIX.md  DUAL_CARD.md  EMBEDDINGS.md  EXAMPLES.md  FAQ.md  GETTING_STARTED.md  GLOSSARY.md  HARDWARE.md  IMAGE_STUDIO.md  KV_MATH.md  LOCAL_AI_PRIMER.md  MULTI_CARD.md  PULL.md  QUALITY_TEST.md  README.md  SINGLE_CARD.md  STRUCTURED_COT.md  TQ3_MTP_GENESIS.md  UPSTREAM.md  VIDEO_STUDIO.md  WSL_SETUP.md
docs/ai-studio/: README.md  audio.md  image.md  requirements.md  video.md
docs/engines/: README.md  SGLANG.md  VLLM.md
docs/img/: power-cap-3090-prefill.py  power-cap-3090-qwen36.py
models/gemma-4-26b-a4b/: README.md
models/gemma-4-31b/: README.md
models/qwen3-omni-30b-a3b/vllm-omni/: README.md
models/qwen3.6-27b/: INTERNALS.md  README.md
models/qwen3.6-27b/llama-cpp/: README.md
results/baselines/: README.md
scripts/: bench-agentic.sh  c3t  detect_nvlink.sh  generate-compose.sh  gpu-mode.sh  launch.sh  power-cap-sweep.sh  preflight.sh  pull.sh  quality-baseline.sh  quality-test.sh  rebench-full.sh  report.sh  setup-ai-studio.sh  setup-image-studio.sh  setup-video-studio.sh  setup.sh  soak-test.sh  switch.sh  verify-full.sh  verify-stress.sh
scripts/lib/: bench-row-formatter.sh  compose-meta.sh  generate_compose.py  registry-emit.sh  studio-models.tsv
scripts/tests/: test-classifier.sh  test-compose-image-drift.sh  test-compose-mounts-resolve.sh  test-compose-registry-disk.sh  test-dedup.sh  test-default-resolver.sh  test-detect-nvlink-alloc-conf.sh  test-detect-nvlink-autop2p.sh  test-diagnose-profile.sh  test-generate-compose.sh  test-generate-from-profile.sh  test-gpu-mode-list.sh  test-hf-repos-resolve.sh  test-hwdetect.sh  test-kv-generic-dense.sh  test-launch-compat.sh  test-launch-registry-parity.sh  test-lmcache-env-passthrough.sh  test-loop-input.sh  test-measurement-record.sh  test-model-weights-registry.sh  test-preflight-compose-deps.sh  test-profiles-compat.sh  test-pull.sh  test-pullemit-capture.sh  test-pullgate-gates.sh  test-quality-baseline.sh  test-quality-thinking.sh  test-registry-json.sh  test-setup-picker.sh  test-submit-pull.sh  test-switch-registry-parity.sh  test-weights-revision.sh
services/comfyui/: docker-compose.yml  download_ace_step.sh  download_audio_models.sh  download_director.sh  download_kokoro.sh  download_krea.sh  download_stable_audio.sh  download_step_audio.sh  download_studio_models.sh  download_video_models.sh  entrypoint.sh
services/litellm/: config.yaml
services/openwebui/: docker-compose.yml  imagegen.env
services/studio/: README.md  build_studio_pipe.py  push-pipe-to-owui.sh  studio_pipe.py
tools/: kv-calc.py
tools/charts/: gen-perf.py
tools/residency-instrument/: run-instrumented-soak.sh
tools/serve-cockpit/: README.md  pyproject.toml
tools/serve-cockpit/club3090_cockpit/: __main__.py  app.py  data.py  registry.py  services.py
tools/serve-cockpit/tests/: test_app_headless.py  test_services.py
tools/test-console/: README.md  pyproject.toml  test_summary.md
tools/test-console/club3090_test_console/: __init__.py  __main__.py  app.py  app.tcss  detect.py  parsers.py  runner.py
tools/test-console/club3090_test_console/widgets/: __init__.py  history_view.py  live_pane.py  manual_target.py  target_pane.py  test_menu.py
tools/test-console/tests/: test_detect.py  test_parsers.py  test_runner.py
(+160 files in other folders)
